updates to text & images on main, resume, about

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid pt-3">
           <div class="row">
             <div class="col-md-5">
-              <h5>Hello! I've been a land use planner for 24 years and am currently pursuing a Master's degree in GIS and Web Map Programming.</h5>
+              <h5>Hello! I've been a land use planner for 25 years and have recently completed Master's degree in GIS Development.</h5>
               <h5>Welcome to my portfolio!</h5>
                 <div class="container">
                   <img class="float-right"src="assets/shortname.png" alt="signature" width="250" height="125">
@@ -53,6 +53,26 @@
           </div>     
     </div>
   </div>
+
+  <div class="container-fluid">
+    <h3> Mapping Applications </h3>
+    <div class="row">
+      <div class="col-md-4 pt-3">
+          <h6> <em>Leon County Building Time Lapse: 1824 to present </em></h6>
+          <img class="img-fluid" src="assets/BldgTimeLapse.png" class="img-thumbnail" alt="Building Time Lapse" width="436" > 
+          <a href="">Application Link</a>
+       </div>
+      <div class="col-md-4 pt-3">
+          <h6> <em>Tallahassee Development Trend Analysis: 2009 to 2022 </em></h6>
+          <img class="img-fluid" src="assets/LeonDevelopment.png" class="img-thumbnail" alt="Leon Development Analysis" width="436"> 
+          <a href="">Application Link </a>&nbsp; &nbsp; &nbsp;<a href="">Video Link</a>
+      </div>
+      <div class="col-md-4 pt-3">
+          <h6> <em>Trail User Map for Elinor Klapp-Phipps Park</em></h6>
+          <img class="img-fluid" src="assets/KlappPhippsTrails.png" class="img-thumbnail" alt="Klapp Phipps Trails" width="436"> 
+      </div>
+    </div>
+  </div>  
 
   <div class="container-fluid">
     <h3> Thematic Maps and Infographics </h3>
