--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
   <div class="container-fluid pt-4">
     <div class="row">
       <div class="col-md-2">
-        <img class="img-fluid" src="assets/headshot_thumbnail.png" class="img-thumbnail" alt="headshot" width="200" height="200">
+        <img class="img-fluid" src="assets/2020 Cherie Headshot.jpg" class="img-thumbnail" alt="headshot" width="200" height="200">
       </div>
       <div class="col-md-8">  
         <h3 class="text-dark">Cherie Y. Bryant, AICP</h3>
@@ -58,22 +58,41 @@
     <div class="row">
       <div class="col-md-10"> 
         <h3 class="text-dark">Employment History</h3>
-        <p>Planning Director for Tallahassee-Leon County Planning Department</p>
-        <h6>2014 — Present (position upgraded from Manager to Director in 2017)</h6>
+        <br>
+        <p>Special Projects Coordinator, Tallahassee Growth Management Department</p>
+        <h6>2021 - present</h6>
           <ul>
-            <li>Manage the day to day operations of the department's 25 employees, four divisions, three citizen committees, and the Planning Commission</li>
-            <li>Prepare complex policy analyses and make professional recommendations affecting long-term sustainability, growth, and development for a county of 300,000 people</li>
-            <li>Regularly make professional presentations on complex and controversial topics</li>
-            <li>Brief City and County elected officials and top management on politically sensitive or high-profile projects and issues</li>
-            <li>Organize and run numerous public meetings, workshops and hearings throughout the community</li>
-            <li>Coordinate regularly with various departments, the Community Redevelopment Agency, businesses and neighborhood groups</li>
-            <li>Technical subcommittee member of the Metropolitan Planning Organization and Blueprint Intergovernmental Agency</li>
-            <li>Oversee completion of special projects requested by City and County administration</li>
-            <li>Served during the emergency management response to three major hurricanes</li>
+            <li>Coordinate the GIS needs for the Land Use and Environmental Services Division and department director</li>
+            <li>Policy analysis using custom generate databases and applications</li>
+            <li>GIS application development using ArcGIS Pro and the full suite of ArcGIS Online products</li>
+            <li>Creating databases and mapping application for field inspectors using FieldMaps</li>
+            <li>Calibrate and maintain GPS units for field use by inspectors</li>
+            <li>Completely reorganized department webpage content to provide a more effective and easier customer experience</li>
+            <li>Coordinate with the Business Technological specialist to incorporate custom maps into the CityWorks permitting interface</li>
         </ul>
       </div>
     </div>
   </div>
+
+</div>  <div class="container-fluid pt-4">
+  <div class="row">
+    <div class="col-md-10"> 
+      <p>Planning Director for Tallahassee-Leon County Planning Department</p>
+      <h6>2014 — 2021 (position upgraded from Manager to Director in 2017)</h6>
+        <ul>
+          <li>Manage the day to day operations of the department's 25 employees, four divisions, three citizen committees, and the Planning Commission</li>
+          <li>Prepare complex policy analyses and make professional recommendations affecting long-term sustainability, growth, and development for a county of 300,000 people</li>
+          <li>Regularly make professional presentations on complex and controversial topics</li>
+          <li>Brief City and County elected officials and top management on politically sensitive or high-profile projects and issues</li>
+          <li>Organize and run numerous public meetings, workshops and hearings throughout the community</li>
+          <li>Coordinate regularly with various departments, the Community Redevelopment Agency, businesses and neighborhood groups</li>
+          <li>Technical subcommittee member of the Metropolitan Planning Organization and Blueprint Intergovernmental Agency</li>
+          <li>Oversee completion of special projects requested by City and County administration</li>
+          <li>Served during the emergency management response to three major hurricanes</li>
+      </ul>
+    </div>
+  </div>
+</div>
 
   <div class="container-fluid pt-4">
     <div class="row">
@@ -130,19 +149,19 @@
     <h3 class="text-dark" class="font-weight-bolder">Education</h3>
     <div class="row pt-2">
       <div class="col-md-10"> 
-        <h5 class="text-white">Master’s of GIS and Web Map Programming (online)</h5>
+        <h5 class="text-white">Master’s of GIS Development (online)</h5>
         <h6 class="text-dark">University of Wisconsin – Madison</h6>
-        <h6 class="text-dark">January 2020 – 2022 (expected)</h6>
+        <h6 class="text-dark">2020 – 2023</h6>
         <h6 class="text-dark">Coursework:</h6>
             <ul class="text-dark" style="font-size:15px;">
-              <li>Geocomputing (complete, Fall 2019)</li>
-              <li>Graphic Design in Cartography (complete, Spring 2020)</li>
-              <li>Spatial Database Design, Creation & Maintenance (in progress)</li>
-              <li>Interactive Cartography & Visualization (2021)</li>
-              <li>Spatial Web & Mobile Programming (2021)</li>
-              <li>GIS & Spatial Analysis (2021)</li>
-              <li>Capstone in GIS Development (2022)</li>
-              <li>Practicum in GIS Development (2022)</li>
+              <li>Geocomputing</li>
+              <li>Graphic Design in Cartography</li>
+              <li>Spatial Database Design, Creation & Maintenance</li>
+              <li>Interactive Cartography & Visualization</li>
+              <li>Spatial Web & Mobile Programming</li>
+              <li>GIS & Spatial Analysis</li>
+              <li>Capstone in GIS Development</li>
+              <li>Practicum in GIS Development</li>
           </ul>
       </div>
     </div>
@@ -193,11 +212,16 @@
         <h3 class="text-dark">Software & Programming Knowledge</h3>
           <ul class="text-white">
             <li>ArcMap & ArcPro</li>
+            <li>JavaScript</li>
+            <li>Intermediate Python, including ArcPy & Pandas</li>
+            <li>ArcGIS Maps SDK for JavaScript</li>
+            <li>ArcGIS Online suite of products, including Experience Builder and Dashboards</li>
+            <li>HTML5/CSS3, including Bootstrap & Bulma CSS frameworks</li>
+            <li>PostgreSQL</li>
+            <li>Familiarity with Java, in the context of connecting to PostgreSQL databases for web applications</li>
             <li>Adobe Illustrator & Adobe Photoshop</li>
-            <li>HTML5/CSS3</li>
-            <li>Bootstrap</li>
             <li>Map Box Studio</li>
-            <li>Geocomputing, including Python, GDAL/OGR & ArcPy</li>
+            <li>GDAL/OGR</li>
             <li>Microsoft Office Suite</li>
           </ul>
       </div>
