Additional Text & image updates

--- a/index.html
+++ b/index.html
@@ -58,21 +58,42 @@
     <h3> Mapping Applications </h3>
     <div class="row">
       <div class="col-md-4 pt-3">
-          <h6> <em>Leon County Building Time Lapse: 1824 to present </em></h6>
-          <img class="img-fluid" src="assets/BldgTimeLapse.png" class="img-thumbnail" alt="Building Time Lapse" width="436" > 
-          <a href="">Application Link</a>
-       </div>
-      <div class="col-md-4 pt-3">
-          <h6> <em>Tallahassee Development Trend Analysis: 2009 to 2022 </em></h6>
-          <img class="img-fluid" src="assets/LeonDevelopment.png" class="img-thumbnail" alt="Leon Development Analysis" width="436"> 
-          <a href="">Application Link </a>&nbsp; &nbsp; &nbsp;<a href="">Video Link</a>
+        <h6> <em>Leon County Building Time Lapse: 1824 to present Using ArcGIS Maps SDK for JavaScript </em></h6>
+        <img class="img-fluid" src="assets/BldgTimeLapse.png" class="img-thumbnail" alt="Building Time Lapse" width="460"> 
+        <a href="https://cybryant.github.io/BldgTimeLapse/">Application Link </a>
       </div>
       <div class="col-md-4 pt-3">
-          <h6> <em>Trail User Map for Elinor Klapp-Phipps Park</em></h6>
-          <img class="img-fluid" src="assets/KlappPhippsTrails.png" class="img-thumbnail" alt="Klapp Phipps Trails" width="436"> 
+          <h6> <em>Tallahassee Development Trend Analysis: 2009 to 2022 Using ArcGIS Maps SDK for JavaScript</em></h6>
+          <img class="img-fluid" src="assets/LeonDevelopment.png" class="img-thumbnail" alt="Leon Development Analysis" width="460"> 
+          <a href="https://cybryant.github.io/LeonParcelTimeAnalysis/">Application Link </a>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/pC-f27qHRtI">Video Link</a>
       </div>
+      <div class="col-md-4 pt-3">
+          <h6> <em>Trail User Map for Elinor Klapp-Phipps Park Using ArcGIS Maps SDK for JavaScript</em></h6>
+          <img class="img-fluid" src="assets/KlappPhippsTrails.png" class="img-thumbnail" alt="Klapp Phipps Trails" width="460"> 
+          <a href="https://cybryant.github.io/Project2/">Application Link </a>&nbsp; &nbsp; &nbsp;<a href="https://youtu.be/WYazRaTsCdU">Video Link</a>
+      </div>      
     </div>
-  </div>  
+    <br>
+    <div class="row">
+      <div class="col-md-4 pt-3">
+        <h6> <em>Java/PostgreSQL Web Application of Historic Tallahassee Photographs Using Google Maps API</em></h6>
+        <img class="img-fluid" src="assets/TallahasseeHistoricPhotoApp.png" class="img-thumbnail" alt="Historic Photo App" width="460"> 
+        <a href="https://youtu.be/R9VHeHR04zE">Video Link </a>
+      </div>
+      <div class="col-md-4 pt-3">
+          <h6> <em>Python (TKinter) Desktop Applicaton Analyzing Wisconsin Well Nitrogen Levels</em></h6>
+          <img class="img-fluid" src="assets/WellNitrogen.png" class="img-thumbnail" alt="Wisconsin Well Nitrogen Analysis" width="460"> 
+          <a href="https://youtu.be/vdl6MSYXqVQ">Video Link</a>
+      </div>
+      <div class="col-md-4 pt-3">
+          <h6> <em>Web Application to Explore Discount Store Distribution Using Leaflet</em></h6>
+          <img class="img-fluid" src="assets/DiscountStores.png" class="img-thumbnail" alt="Discount Stores" width="460"> 
+          <a href="https://cybryant.github.io/geo575_final/index.html">Application Link </a>&nbsp; &nbsp; &nbsp;<a href="https://www.youtube.com/watch?v=-Vq-4Y_Rmus">Video Link</a>
+      </div>      
+    </div>    
+  </div> 
+  <br> 
+  <br>
 
   <div class="container-fluid">
     <h3> Thematic Maps and Infographics </h3>
