--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid pt-3">
           <div class="row">
             <div class="col-md-5">
-              <h5>Hello! I've been a land use planner for 25 years and have recently completed Master's degree in GIS Development.</h5>
+              <h5>Hello! I've been a land use planner for 25 years and have recently completed my Master's degree in GIS Development.</h5>
               <h5>Welcome to my portfolio!</h5>
                 <div class="container">
                   <img class="float-right"src="assets/shortname.png" alt="signature" width="250" height="125">
