--- a/resume.html
+++ b/resume.html
@@ -149,7 +149,7 @@
     <h3 class="text-dark" class="font-weight-bolder">Education</h3>
     <div class="row pt-2">
       <div class="col-md-10"> 
-        <h5 class="text-white">Master’s of GIS Development (online)</h5>
+        <h5 class="text-white">Master’s of GIS Development</h5>
         <h6 class="text-dark">University of Wisconsin – Madison</h6>
         <h6 class="text-dark">2020 – 2023</h6>
         <h6 class="text-dark">Coursework:</h6>
@@ -167,7 +167,7 @@
     </div>
     <div class="row pt-3">
       <div class="col-md-10">        
-        <h5 class="text-white">Graphic Information Systems Fundamentals Capstone Certificate (online)</h5>
+        <h5 class="text-white">Graphic Information Systems Fundamentals Capstone Certificate</h5>
         <h6 class="text-dark">University of Wisconsin – Madison</h6>
         <h6 class="text-dark">May 2019 — December 2019</h6>
       </div>
@@ -218,7 +218,7 @@
             <li>ArcGIS Online suite of products, including Experience Builder and Dashboards</li>
             <li>HTML5/CSS3, including Bootstrap & Bulma CSS frameworks</li>
             <li>PostgreSQL</li>
-            <li>Familiarity with Java, in the context of connecting to PostgreSQL databases for web applications</li>
+            <lJava, in the context of connecting to PostgreSQL databases for web applications</li>
             <li>Adobe Illustrator & Adobe Photoshop</li>
             <li>Map Box Studio</li>
             <li>GDAL/OGR</li>
